correct typos in print statements

--- a/cosine_similarity.ipynb
+++ b/cosine_similarity.ipynb
@@ -105,7 +105,7 @@
         "# 6. Compare \"Car\" (index 1) to \"Apple\" (index 2)\n",
         "sim_car_apple = util.cos_sim(vectors[1], vectors[2])\n",
         "\n",
-        "print('Resutls of Experiment 1:')\n",
+        "print('Results of Experiment 1:')\n",
         "print(f\"Similarity Bus-Car: {sim_bus_car_e1.item():.4f}\")\n",
         "print(f\"Similarity Bus-Apple: {sim_bus_apple.item():.4f}\")\n",
         "print(f\"Similarity Car-Apple: {sim_car_apple.item():.4f}\")"
@@ -138,7 +138,7 @@
         "# 6. Compare \"Car\" (index 1) to \"Banana\" (index 2)\n",
         "sim_car_banana = util.cos_sim(vectors[1], vectors[2])\n",
         "\n",
-        "print('Resutls of Experiment 2:')\n",
+        "print('Results of Experiment 2:')\n",
         "print(f\"Similarity Bus-Car: {sim_bus_car_e2.item():.4f}\")\n",
         "print(f\"Similarity Bus-Banana: {sim_bus_banana.item():.4f}\")\n",
         "print(f\"Similarity Car-Banana: {sim_car_banana.item():.4f}\")"
@@ -191,7 +191,7 @@
         "# 6. Compare \"Car\" (index 1) to \"Tuesday\" (index 2)\n",
         "sim_car_tuesday = util.cos_sim(vectors[1], vectors[2])\n",
         "\n",
-        "print('Resutls of Experiment 3:')\n",
+        "print('Results of Experiment 3:')\n",
         "print(f\"Similarity Bus-Car: {sim_bus_car_e3.item():.4f}\")\n",
         "print(f\"Similarity Bus-Tuesday: {sim_bus_tuesday.item():.4f}\")\n",
         "print(f\"Similarity Car-Tuesday: {sim_car_tuesday.item():.4f}\")"
